--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,4 +32,5 @@ jobs:
       run: pytest --pyargs hermes_merit --cov hermes_merit
       env:
         PLATFORM: ${{ matrix.platform }}
-
+    - name: Upload coverage reports to Codecov with GitHub Action
+      uses: codecov/codecov-action@v3
