Update the windows testing

--- a/.github/workflows/codestyle.yml
+++ b/.github/workflows/codestyle.yml
@@ -32,8 +32,7 @@ jobs:
         python -m pip install -e .[style]
     - name: Lint with Black
       run: |
-        black --check --diff hermes_merit
+        black --check --diff hermes_eea
     - name: flake8
       run: |
-        flake8 --count hermes_merit
-
+        flake8 --count hermes_eea
